# Runix

./: 404.html  About_the_author.html  Building_Minimal_Rust_Kernel_Practical_Start_Runix.html  Cargo.toml  Creating_Minimal_Rust_Executable_for_Systems_Programming.html  Creating_an_Operating_System_in_Rust.html  Creating_first_Runix_VGA_text_output_driver.html  Creation_first_code_the_ASM_language.html  GNUmakefile  README.md  Runix.iso  bootloader.html  build.rs  debug.sh  driver.html  index.html  limine.conf  print.html  qemu_debug.sh  searcher-c2a407aa.js  searchindex-553d22a9.js  searchindex-5c4cdd07.js  searchindex-ceb01208.js  solution_bootloader.html  start.html  start.sh  toc-019780d5.js  toc-8e7fd859.js  toc.html
ASM/: ASM_1.html  ASM_2.html  ASM_Rust_1.html  Creation_first_code_the_ASM_language.html  Start_Full_ASM.html  instructions_1.html
Docs/Runix/.obsidian/: community-plugins.json  hotkeys.json  workspace.json
Docs/my-book/: Cargo.toml
book/: Creating_first_Runix_VGA_text_output_driver.html  driver.html
iso_root/boot/: kernel.elf
kernel/: Cargo.toml  build.rs  kernel.ld  start_debug.sh
kernel/.cargo/: config.toml
kernel/src/: main.rs
kernel/src/cpu/: cpu.rs
kernel/src/drivers/vga/: mod.rs
kernel/src/drivers/vga/xd8000/: color.rs  mod.rs  text.rs
kernel/src/experiments/: mod.rs  task_exeperiment.rs
kernel/src/set_macros/: mod.rs
kernel/src/set_macros/vga_macros/: println.rs
kernel/src/task/: mod.rs  simple_executor.rs
kernel/src/task/cpu_info/: cpuinfo.rs
src/: main.rs
src/cpu/: cpu.rs  cpu_info.asm
src/task/: task.rs
(+71 files in other folders)
