[package]
name = "Runix"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[target.x86_64-kernel]
runner = "echo"  # просто заглушка, щоб cargo не намагався запускати
rustflags = [
    "-C", "link-args=-nostartfiles",
    "-C", "link-arg=-Tkernel.ld"
]
linker = "ld.lld"

[build]
target = "x86_64-kernel.json"



[unstable]
build-std = ["core", "alloc", "compiler_builtins"]
build-std-features = ["compiler-builtins-mem"]


[dependencies]
bootloader = "0.9"
linked_list_allocator = "0.9" 
spin = "0.9"
