[package]
name = "Runix"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1

[target.x86_64-kernel]
runner = "echo"  # просто заглушка, щоб cargo не намагався запускати
rustflags = [
    "-C", "link-args=-nostartfiles",
    "-C", "link-arg=-Tkernel.ld"
]
linker = "ld.lld"

[build]
target = "x86_64-kernel.json"

[build-dependencies]
cc = "1"

[unstable]
build-std = ["core", "alloc", "compiler_builtins"]
build-std-features = ["compiler-builtins-mem"]


[dependencies]
limine = "0.5"
x86_64 = "0.14"
linked_list_allocator = "0.9" 
spin = "0.9"


[target.'cfg(target_os = "none")']
rustflags = [
    "-C", "link-arg=-nostartfiles",
    "-C", "link-arg=-Tkernel.ld",
    "-C", "link-arg=-static",
    "-C", "link-arg=-no-pie",
]

